# ai-test-journey

./: .env.example  .gitignore  main.py  pyproject.toml
.claude/: settings.local.json
src/: file.diff  main.py
src/git_diff_ai_test_analyzer/: __init__.py  cli.py  config.py  git_ops.py  service.py
src/git_diff_ai_test_analyzer/analysis/: __init__.py  ai_analyzer.py
src/git_diff_ai_test_analyzer/models/: __init__.py  schemas.py
src/git_diff_ai_test_analyzer/parsing/: __init__.py  diff_parser.py
src/git_diff_ai_test_analyzer/reporting/: __init__.py  report_generator.py
