[project]
name = "ai-test-journey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.3",
    "openai>=1.109.1",
    "playwright>=1.58.0",
    "pypdf>=6.1.2",
    "python-docx>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
ai-test-suggest = "git_diff_ai_test_analyzer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/git_diff_ai_test_analyzer"]

[tool.uv]
package = true
